# pkgx

./: .envrc  .gitbook.yaml  .gitignore  .gitpod.yml  .markdownlint.yml  AGENTS.md  Cargo.toml  Dockerfile  Firtsproject.js  LICENSE.txt  MyFirtsProject.js  README.md  SECURITY.md  deno.json  deno.jsonc  entrypoint.ts  file  foo  import-map.json  import-map.test.json  tea.yaml  tsconfig.json
.github/: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  dependabot.yml  markdownlint.yml  mk-pantry-accessible.sh  pull_request_template.md
.github/cache/: action.yml
.github/workflows/: agent-boundary-check.yml  cd.brew.yml  cd.crates.yml  cd.docker.yml  cd.npm.yml  cd.vx.yml  cd.www.yml  cd.yml  ci.ca-cert.yml  ci.docker.yaml  ci.docker.yml  ci.md.yml  ci.shellcode.yml  ci.sync.yml  ci.yml  quality-gate.yml  release-packaging.yaml.todo  retagger.yml  test.yml  vx-tagger.yml
benchmarks/: startup_bench.ts
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  dump.rs  execve.rs  help.rs  main.rs  query.rs  resolve.rs  setup.rs  spinner.rs  utils.rs  which.rs  x.rs
crates/cli/src/tests/: main.rs  mod.rs
crates/lib/: Cargo.toml  build.rs
crates/lib/src/: amazon_root_ca1.pem  cellar.rs  client.rs  config.rs  dist_pkgx_dev.pem  env.rs  hydrate.rs  install.rs  install_multi.rs  inventory.rs  lib.rs  pantry.rs  pantry_db.rs  platform_case_aware_env_key.rs  resolve.rs  sync.rs  types.rs  utils.rs
docker/: Dockerfile.archlinux  Dockerfile.busybox  Dockerfile.debian  Dockerfile.ubuntu
docs/: README.md  SUMMARY.md  contributing.md  dev.md  faq.md  getting-started.md  installing-pkgx.md  pantry-api.md  pantry.md  pkgx-install.md  pkgx.md  running-anything.md  scripting.md  shell-integration.md  support.md  tea-commit.md  tea-install.md  troubleshooting.md
docs/deeper-dives/: c++.md  conceptual-overview.md  shellcode.md
docs/pkging/: pantry-api.md  pantry.md
fixtures/: .nvmrc  .yarnrc  .yarnrc.yml  Cargo.toml  Gemfile  action.yml  cargo.toml  cdk.json  deno.jsonc  go.mod  pixi.toml  pkgx.yml  requirements.txt
scripts/: _shared.ts  benchmark.sh  bottle-all.ts  bottle.ts  build-all.ts  build.ts  clean-all.sh  clean-prefix.sh  compile.sh  fetch-src.ts  find-orphaned-docker-hub-images.py  fixup-checksums.ts  get-tmp.ts  install.ts  inventory.ts  publish-release.sh  repair.ts  run-coverage.sh  run_coverage.sh  self-install.sh  self-install.ts  test.sh  uninstall.ts  upload-sync.ts
src/: app.X.ts  app.complete.ts  app.dump.ts  app.err-handler.ts  app.exec.ts  app.gui.ts  app.help.ts  app.magic.ts  app.main.ts  app.provides.ts  app.sync.ts  app.ts  args.ts  err-handler.ts  init.ts  parse-args.test.ts  parse-args.ts  types.ts  utils.ts
src/common/: requirementsCandidate.ts
src/hooks/: index.ts  useBinaryRepository.ts  useCache.ts  useCellar.ts  useConfig.ts  useDarkMagic.ts  useDb.ts  useDownload.ts  useErrorHandler.ts  useExec.install.ts  useExec.ts  useExecutableMarkdown.ts  useFetch.ts  useFlags.ts  useGitHubAPI.ts  useInventory.ts  useLogger.ts  useMagic.ts  useMoustaches.ts  useOffLicense.ts  usePackageYAML.ts  usePantry.git.ts  usePantry.ls.ts  usePantry.ts  usePlatform.ts  usePrefix.ts  usePrint.ts  useRequirementsFile.ts  useRun.ts  useSync.ts  (+6 more)
tests/: cli.test.ts  cli.ts  exe∕md.test.ts  integration.suite.ts  pkgutils.ts  semver.test.ts  utils.ts
(+146 files in other folders)
