[package]
name = "libpkgx"
description = "Install and run `pkgx` packages"
authors = ["Max Howell <mxcl@me.com>", "Jacob Heider <jacob@pkgx.dev>"]
license = "Apache-2.0"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/pkgxdev/pkgx"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.95"
dirs-next = "2.0"
libsemverator = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1"
strum = "0.24"
strum_macros = "0.24"
rusqlite = "0.32.1"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["stream", "blocking"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "xz"] }
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.13", features = ["compat"] }
futures = "0.3.31"
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["process"] }
fs2 = "0.4.3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
