[package]
name = "libpkgx"
description = "Install and run `pkgx` packages"
authors = ["Max Howell <mxcl@me.com>", "Jacob Heider <jacob@pkgx.dev>"]
license = "Apache-2.0"
version = "0.7.0"
edition = "2021"
repository = "https://github.com/pkgxdev/pkgx"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.95"
dirs-next = "2.0"
libsemverator = { version = "0.10.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1"
strum = "0.27"
strum_macros = "0.27"
rusqlite = "0.37.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["stream", "blocking"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "xz"] }
tokio-tar = "0.3.1"
tokio-util = { version = "0.7.13", features = ["compat"] }
futures = "0.3.31"
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["process"] }
fs2 = "0.4.3"
tempfile = "3.16.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rusqlite = { version = "0.33.0", features = ["bundled"] }
